--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <start-class>com.pwr.teamfinder.Application</start-class>
         <java.version>1.8</java.version>
+        <mysql.version>5.1.14</mysql.version>
     </properties>
 
     <repositories>
@@ -52,11 +53,13 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
-        <!-- HSQLDB -->
+        <!-- MySQL -->
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <scope>runtime</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
