Dodanie danych testowych

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/teamfinder
+spring.datasource.url=jdbc:mysql://localhost/teamfinder?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
