Home controller, bootstrap, jsp handling, messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+
+management.contextPath: /management
+
+spring.view.prefix: /WEB-INF/jsp/
+spring.view.suffix: .jsp
