Signup controller, signup form, languages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ management.contextPath: /management
 
 spring.view.prefix: /WEB-INF/jsp/
 spring.view.suffix: .jsp
+
+spring.messages.basename=languages
+spring.messages.cacheSeconds=-1
+spring.messages.encoding=UTF-8
