Signup page, signup controller, signup form handling, some improvements

--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -4,3 +4,27 @@ user.created: Created user with id
 signup: Sign up
 login: Log in
 404: Error 404
+name.header: Name
+name.placeholder: Enter your name
+surname.header: Surname
+surname.placeholder: Enter your surname
+email.header: Email
+email.placeholder: Enter your email address
+email.repeat.placeholder: Confirm your email
+password.header: Password
+password.placeholder: Enter your password
+password.repeat.placeholder: Confirm your password
+city.header: City
+city.placeholder: Enter your city
+street.header: Street
+street.placeholder: Enter your street
+houseNumber.header: House number
+houseNumber.placeholder: Enter your house number
+role.header: Role
+role.placeholder: Enter your Role
+role.default.header: Choose your role
+role.sportsman.header: Sportsman
+role.gym_owner.header: Gym owner
+about.header: About me
+about.placeholder: Enter some informations about you
+termsAcceptance.header: I accept all terms and conditions.
