Signup page improvements

--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -10,10 +10,12 @@ surname.header: Surname
 surname.placeholder: Enter your surname
 email.header: Email
 email.placeholder: Enter your email address
-email.repeat.placeholder: Confirm your email
+email.confirm.header: Email confirm
+email.confirm.placeholder: Confirm your email
 password.header: Password
 password.placeholder: Enter your password
-password.repeat.placeholder: Confirm your password
+password.confirm.header: Confirm password
+password.confirm.placeholder: Confirm your password
 city.header: City
 city.placeholder: Enter your city
 street.header: Street
