Added errors to signup form, some improvements still needed

--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -6,27 +6,37 @@ login: Log in
 404: Error 404
 name.header: Name
 name.placeholder: Enter your name
+name.error: Invalid name. You can use only letters and .,'- (2 to 50 characters).
 surname.header: Surname
 surname.placeholder: Enter your surname
+surname.error: Invalid surname. You can use only letters and .,'- (2 to 50 characters).
 email.header: Email
 email.placeholder: Enter your email address
+email.error: Invalid email address (should consist 5 to 50 characters).
 email.confirm.header: Email confirm
 email.confirm.placeholder: Confirm your email
 password.header: Password
 password.placeholder: Enter your password
+password.error: Invalid password. You can use only letters and .,'- (8 to 20 characters).
 password.confirm.header: Confirm password
 password.confirm.placeholder: Confirm your password
 city.header: City
 city.placeholder: Enter your city
+city.error: Invalid city. You can use only letters and .,'- (2 to 50 characters).
 street.header: Street
 street.placeholder: Enter your street
+street.error: Invalid street. You can use only letters and .,'- (max 50 characters).
 houseNumber.header: House number
 houseNumber.placeholder: Enter your house number
+houseNumber.error: Invalid house number. You can use only 0-9 characters (max 10 characters).
 role.header: Role
 role.placeholder: Enter your Role
 role.default.header: Choose your role
+role.error: You haven't chosen the role. Choose the role properly.
 role.sportsman.header: Sportsman
 role.gym_owner.header: Gym owner
 about.header: About me
 about.placeholder: Enter some informations about you
+about.error: You can use only letters and .,'- (max 500 characters).
 termsAcceptance.header: I accept all terms and conditions.
+termsAcceptance.error: You need to accept our service terms and conditions.
