More signup form improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 
-management.contextPath: /management
+management.contextPath= /management
 
-spring.view.prefix: /WEB-INF/jsp/
-spring.view.suffix: .jsp
+spring.view.prefix= /WEB-INF/jsp/
+spring.view.suffix= .jsp
 
-spring.messages.basename=languages
+spring.messages.basename=messages
 spring.messages.cacheSeconds=-1
 spring.messages.encoding=UTF-8
