More and more signup form improvements

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,10 +1,22 @@
-name.error: Invalid name. You can use only letters and .,'- ({min} to {max} characters).
-surname.error: Invalid surname. You can use only letters and .,'- (2 to 50 characters).
-email.error: Invalid email address (should consist 5 to 50 characters).
-password.error: Invalid password. You can use only letters and .,'- (8 to 20 characters).
-city.error: Invalid city. You can use only letters and .,'- (2 to 50 characters).
-street.error: Invalid street. You can use only letters and .,'- (max 50 characters).
-houseNumber.error: Invalid house number. You can use only 0-9 characters (max 10 characters).
-role.error: You haven't chosen the role. Choose the role properly.
-about.error: You can use only letters and .,'- (max 500 characters).
-termsAcceptance.error: You need to accept our service terms and conditions.
+name.error.blank: Name field cannot be empty.
+name.error.size: Name should contain from {min} to {max} characters.
+name.error.pattern: Name should contain only letters and .,'- characters.
+surname.error.blank: Surname field cannot be empty.
+surname.error.size: Surname should contain from {min} to {max} characters.
+surname.error.pattern: Surname should contain only letters and .,'- characters.
+email.error.blank: Email field cannot be empty.
+email.error.size: Email should contain from {min} to {max} characters.
+email.error.pattern: Email should be provided in form xxx@domain.tld
+password.error.blank: Password field cannot be empty.
+password.error.size: Password should contain from {min} to {max} characters.
+city.error.blank: City field cannot be empty.
+city.error.size: City should contain from {min} to {max} characters.
+city.error.pattern: City should contain only letters and .,'- characters.
+street.error.size: Street should contain max. {max} characters.
+street.error.pattern: Street should contain only letters and .,'- characters.
+houseNumber.error.size: House number should contain max. {max} characters.
+houseNumber.error.pattern: House number should contain only numbers from 0 to 9.
+role.error.blank: You haven't chosen the role. Choose the role properly.
+about.error.size: About me information should contain max. {max} characters.
+about.error.pattern: You can use only letters and .,'- in about me field.
+termsAcceptance.error.blank: You need to accept our service terms and conditions.
