--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+#Database Configuration
 spring.datasource.url=jdbc:mysql://localhost/teamfinder?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.database: MYSQL
 spring.jpa.hibernate.ddl-auto=create-drop
 
 management.contextPath= /management
