--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost/teamfinder?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.database: MYSQL
+spring.jpa.database= MYSQL
+#ddl-auto=update to update database
 spring.jpa.hibernate.ddl-auto=create-drop
 
 management.contextPath= /management
