--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <java.version>1.8</java.version>
         <mysql.version>5.1.14</mysql.version>
         <org.apache.lang.version>3.1</org.apache.lang.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <repositories>
