Email validation handled by signup.jsp

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -7,6 +7,7 @@ surname.error.pattern: Surname should contain only letters and .,'- characters.
 email.error.blank: Email field cannot be empty.
 email.error.size: Email should contain from {min} to {max} characters.
 email.error.pattern: Email should be provided in form xxx@domain.tld
+emailNotUnique: Entered email is already in database. Enter another email address.
 password.error.blank: Password field cannot be empty.
 password.error.size: Password should contain from {min} to {max} characters.
 city.error.blank: City field cannot be empty.
