--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.useUnicode=true
 hibernate.connection.characterEncoding=UTF-8
-hibernate.connection.charSet=UTF-8
+hibernate.connection.charset=UTF-8
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
