--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database Configuration
-spring.datasource.url=jdbc:mysql://localhost/teamfinder?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost/teamfinder?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
