Mail sending handler, dev profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#Active Profile (dev or other)
+spring.profiles.active: dev
+
 #Database Configuration
 spring.datasource.url=jdbc:mysql://localhost/teamfinder?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
@@ -7,11 +10,19 @@ spring.jpa.database= MYSQL
 #ddl-auto=update to update database
 spring.jpa.hibernate.ddl-auto=create-drop
 
+#Spring Actuator Configuration
 management.contextPath= /management
 
+#View Resolver Configuration
 spring.view.prefix= /WEB-INF/jsp/
 spring.view.suffix= .jsp
 
+#Internationalization Configuration
 spring.messages.basename=messages
 spring.messages.cacheSeconds=-1
 spring.messages.encoding=UTF-8
+
+# Email Configuration
+mail.sender.host: smtp.gmail.com
+smtp.authenticator.email: xxxxx@gmail.com
+smtp.authenticator.password: your_password
