Remember me and password bcrypt encoding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.messages.encoding=UTF-8
 mail.sender.host: smtp.gmail.com
 smtp.authenticator.email: xxxxx@gmail.com
 smtp.authenticator.password: your_password
+
+#Remember me secret string
+rememberMe.privateKey: your_secret_key
