Forgot password, reset password views

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#Host Name
+hostAndPort: localhost:8080
+
 #Active Profile (dev or other)
 spring.profiles.active: dev
 
@@ -16,6 +19,7 @@ management.contextPath= /management
 #View Resolver Configuration
 spring.view.prefix= /WEB-INF/jsp/
 spring.view.suffix= .jsp
+error.whitelabel.enabled=false
 
 #Internationalization Configuration
 spring.messages.basename=messages
