--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -7,9 +7,12 @@ surname.error.pattern: Surname should contain only letters and .,'- characters.
 email.error.blank: Email field cannot be empty.
 email.error.size: Email should contain from {min} to {max} characters.
 email.error.pattern: Email should be provided in form xxx@domain.tld
-emailNotUnique: Entered email is already in database. Enter another email address.
+//email.error.notUnique: Entered email is already in database. Enter another email address.
+//email.error.notFound: Email address not found.
+//email.error.doNotMatch: Emails do not match.
 password.error.blank: Password field cannot be empty.
 password.error.size: Password should contain from {min} to {max} characters.
+//password.error.doNotMatch: Passwords do not match.
 city.error.blank: City field cannot be empty.
 city.error.size: City should contain from {min} to {max} characters.
 city.error.pattern: City should contain only letters and .,'- characters.
