minor layout update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database= MYSQL
 #ddl-auto=update to update database
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #Spring Actuator Configuration
 management.contextPath= /management
