--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "suspy",
   "version": "0.0.1",
-  "homepage": "https://github.com/khozzy/teamfinder",
+  "homepage": "https://github.com/khozzy/suspy",
   "authors": [
     "supersyn <supersyn1234@gmail.com>",
     "Add your credentials"
@@ -24,6 +24,15 @@
     "tests"
   ],
   "dependencies": {
-    "modernizr": "~2.8.3"
+    "angular-bootstrap": "~0.12.0",
+    "angular-http-auth": "~1.2.2",
+    "angular-route": "~1.3.7",
+    "angularjs": "~1.3.7",
+    "bootstrap-material-design": "~0.2.1",
+    "bootstrap": "~3.3.1",
+    "datatables": "~1.10.4",
+    "jquery": "~2.1.2",
+    "protractor": "~1.5.0",
+    "restangular": "~1.4.0"
   }
 }
