See Timeslots in search places Modify Places Modify Timeslots(error) TODO: Add Timeslots

--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,4 @@ src/main/resources/static/public/lib/bower_components/modernizr/test/js/unit-can
 src/main/resources/static/public/lib/bower_components/modernizr/test/js/unit.js
 src/main/resources/static/public/lib/bower_components/modernizr/test/qunit/qunit.css
 src/main/resources/static/public/lib/bower_components/modernizr/test/qunit/qunit.js
+src/main/resources/static/public/lib/bower_components/
