Fixed problems with encoding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.messages.basename=messages
 spring.messages.cacheSeconds=-1
 spring.messages.encoding=UTF-8
 
+server.tomcat.uri-encoding=UTF-8
+
 # Email Configuration
 mail.sender.host: smtp.gmail.com
 smtp.authenticator.email: xxxxx@gmail.com
