--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.profiles.active: dev
 #Database Configuration
 spring.datasource.url=jdbc:mysql://localhost/suspy?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database= MYSQL
 #ddl-auto=update to update database
