--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "datatables": "~1.10.4",
     "jquery": "~2.1.2",
     "modernizr": "~2.8.3",
-    "angular-scroll": "~0.6.4"
+    "angular-scroll": "~0.6.4",
+    "angular-payments": "2472bc9befa25678"
   }
 }
