--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,8 @@
     "angular-payments": "2472bc9befa25678",
     "angular-route": "~1.3.8",
     "angular-ui": "~0.4.0",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "ng-parallax": "~0.1.8",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5"
   }
 }
