--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
     "angular-route": "~1.3.8",
     "angular-ui": "~0.4.0",
     "angular-bootstrap": "~0.12.0",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
+    "angular-resource": "~1.3.8"
   }
 }
